--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,6 +12,7 @@
     <p th:text="${message}"></p>
     <p th:if="${path}">Ruta: <span th:text="${path}"></span></p>
     <a th:href="@{/}" class="btn btn-primary">Volver al inicio</a>
+    <a th:href="@{/}" class="btn btn-secondary ms-2">Volver</a>
   </div>
 </div>
 </body>
