--- a/src/main/resources/templates/customer-list.html
+++ b/src/main/resources/templates/customer-list.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lista de Clientes</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
 <div class="container">
