--- a/src/main/resources/templates/invoice-form.html
+++ b/src/main/resources/templates/invoice-form.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout}">
 <head>
   <title>Crear Nueva Factura</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
 <div class="container-fluid">
