--- a/src/main/resources/templates/customer-list.html
+++ b/src/main/resources/templates/customer-list.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
-<div class="container">
-  <h1 class="my-4">Lista de Clientes</h1>
-  <table class="table table-striped">
+<div class="container mt-5">
+  <h1 class="mb-4">Lista de Clientes</h1>
+  <table class="table is-striped is-fullwidth">
     <thead>
     <tr>
       <th>Nombre</th>
@@ -30,7 +30,7 @@
     </tr>
     </tbody>
   </table>
-  <a href="/customers/new" class="btn btn-primary">Añadir Nuevo Cliente</a>
+  <a href="/customers/new" class="button is-primary mt-4">Añadir Nuevo Cliente</a>
 </div>
 </body>
 </html>
