--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,14 +5,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
-<div class="container-fluid">
+<div class="container is-fluid">
   <div layout:fragment="content">
     <h2 class="mt-5">Error <span th:text="${status}"></span></h2>
     <p class="lead" th:text="${error}"></p>
     <p th:text="${message}"></p>
     <p th:if="${path}">Ruta: <span th:text="${path}"></span></p>
-    <a th:href="@{/}" class="btn btn-primary">Volver al inicio</a>
-    <a th:href="@{/}" class="btn btn-secondary ms-2">Volver</a>
+    <a th:href="@{/}" class="button is-primary">Volver al inicio</a>
+    <a th:href="@{/}" class="button is-light ml-2">Volver</a>
   </div>
 </div>
 </body>
