--- a/src/main/resources/templates/invoice-form.html
+++ b/src/main/resources/templates/invoice-form.html
@@ -4,6 +4,7 @@
       layout:decorate="~{layout}">
 <head>
   <title>Crear Nueva Factura</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
