--- a/src/main/resources/templates/invoice-list.html
+++ b/src/main/resources/templates/invoice-list.html
@@ -2,6 +2,7 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lista de Facturas</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <style>
@@ -39,6 +40,11 @@
     }
     .card {
         margin-bottom: 20px;
+    }
+    @media (max-width: 768px) {
+        .main-content {
+            margin-left: 0;
+        }
     }
   </style>
 </head>
