Add 'Volver al Inicio' links across views

--- a/src/main/resources/templates/customer-form.html
+++ b/src/main/resources/templates/customer-form.html
@@ -64,6 +64,7 @@
         <div class="buttons">
             <button type="submit" class="button is-primary">Guardar Cliente</button>
             <a th:href="@{/customers}" class="button is-light ml-2">Cancelar</a>
+            <a th:href="@{/}" class="button is-primary ml-2">Volver al Inicio</a>
         </div>
     </form>
 </div>
