--- a/src/main/resources/templates/customer-list.html
+++ b/src/main/resources/templates/customer-list.html
@@ -32,6 +32,7 @@
     </tbody>
   </table>
   <a href="/customers/new" class="button is-primary mt-4">Añadir Nuevo Cliente</a>
+  <a th:href="@{/}" class="button is-light mt-4 ml-2">Volver al Inicio</a>
 </div>
 </body>
 </html>
