--- a/src/main/resources/templates/invoice-form.html
+++ b/src/main/resources/templates/invoice-form.html
@@ -70,6 +70,7 @@
     <div class="buttons">
       <button type="submit" class="button is-primary">Guardar Factura</button>
       <a th:href="@{/invoices}" class="button is-light">Cancelar</a>
+      <a th:href="@{/}" class="button is-primary ml-2">Volver al Inicio</a>
     </div>
   </form>
 
