--- a/src/main/resources/templates/invoice-list.html
+++ b/src/main/resources/templates/invoice-list.html
@@ -155,6 +155,7 @@
           </tbody>
         </table>
       </div>
+        <a th:href="@{/}" class="button is-light mt-4">Volver al Inicio</a>
     </main>
   </div>
 </div>
