--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -63,6 +63,7 @@
   </form>
   <div class="has-text-centered mt-3">
     <p>¿No tienes cuenta? <a th:href="@{/register}">Regístrate aquí</a></p>
+    <p class="mt-2"><a th:href="@{/}">Volver al Inicio</a></p>
   </div>
 </div>
 </body>
