--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -75,6 +75,7 @@
   </form>
   <div class="has-text-centered mt-3">
     <p>¿Ya tienes cuenta? <a th:href="@{/login}">Inicia sesión aquí</a></p>
+    <p class="mt-2"><a th:href="@{/}">Volver al Inicio</a></p>
   </div>
 </div>
 </body>
