--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -107,18 +107,18 @@
       </div>
 
       <div class="columns is-multiline">
-        <div class="column is-4" th:each="status, count : ${invoiceStatusCounts}">
+        <div class="column is-4" th:each="entry : ${invoiceStatusCounts}">
           <div class="card mb-3"
-               th:classappend="${status == T(com.modules.invoicer.invoice.domain.InvoiceStatus).PAID ? 'has-background-success has-text-white' :
-                                status == T(com.modules.invoicer.invoice.domain.InvoiceStatus).PENDING ? 'has-background-primary has-text-white' :
-                                status == T(com.modules.invoicer.invoice.domain.InvoiceStatus).SENT ? 'has-background-info has-text-white' :
-                                status == T(com.modules.invoicer.invoice.domain.InvoiceStatus).CANCELLED ? 'has-background-danger has-text-white' :
+               th:classappend="${entry.key == T(com.modules.invoicer.invoice.domain.InvoiceStatus).PAID ? 'has-background-success has-text-white' :
+                                entry.key == T(com.modules.invoicer.invoice.domain.InvoiceStatus).PENDING ? 'has-background-primary has-text-white' :
+                                entry.key == T(com.modules.invoicer.invoice.domain.InvoiceStatus).SENT ? 'has-background-info has-text-white' :
+                                entry.key == T(com.modules.invoicer.invoice.domain.InvoiceStatus).CANCELLED ? 'has-background-danger has-text-white' :
                                 'has-background-warning has-text-black'}">
             <header class="card-header">
-              <p class="card-header-title">Facturas [[${status.displayName}]]</p>
+              <p class="card-header-title">Facturas [[${entry.key.displayName}]]</p>
             </header>
             <div class="card-content">
-              <p class="title">[[${count}]]</p>
+              <p class="title">[[${entry.value}]]</p>
             </div>
           </div>
         </div>
