--- a/src/main/resources/templates/invoice-view.html
+++ b/src/main/resources/templates/invoice-view.html
@@ -48,7 +48,9 @@
     No hay notas registradas.
   </div>
   <div th:each="note : ${notes}" class="box">
-    <p class="is-size-7 has-text-grey" th:text="${#temporals.format(note.createdAt, 'dd-MM-yyyy HH:mm')} + ' - ' + note.author.username"></p>
+    <p class="is-size-7 has-text-grey"
+       th:text="${#temporals.format(note.createdAt, 'dd-MM-yyyy HH:mm')} + ' - ' +
+                 (note.author.fullName != '' ? note.author.fullName : note.author.username)"></p>
     <p th:text="${note.content}"></p>
   </div>
 
